--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная</title>
+    <title>Главная|Свежий взгляд</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/logo.svg">
     <script src="https://kit.fontawesome.com/d17657449b.js" crossorigin="anonymous"></script>
